# rusty-lambda

./: Cargo.toml  README.md  cargo.toml  cloudformation-template.yml
.github/workflows/: deploy.yml
src/: main.rs
src/util/: mod.rs
