[package]
name = "rusty-lambda"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation)
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
anyhow = "1.0.86"
aws-config = "1.5.1"
aws-sdk-s3 = "1.34.0"
futures-util = "0.3.30"
# axum = "0.7.5"
lambda_runtime = "0.11.2"
openssl = { version = "0.10.64", features = ["vendored"] }
reqwest = "0.12.4"
serde = "1"
serde_json = "1.0.117"
tokio = { version = "1", features = ["macros"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5.0"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
